Fix bug with placing cards on face-down single card piles, and add support for single-card piles that look like single cards